--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,8 +7,8 @@
 				<button class="nav-link ppImageBtn" (click)="openDropDown()" [ngClass]="{'active': dropState}"><img src="assets/images/avatar.jpg" alt="User Profile"></button>
 				<ul class="UP_ppDropDownCon list-unstyled transition3ms" [ngClass]="{'open': dropState}">
 					<span></span>
-					<li><a class="transition3ms">Username</a></li>
-					<li><a class="transition3ms">Sign out<i class="fa fa-sign-out float-right mt-1"></i></a></li>
+					<li><a class="transition3ms">{{user.first_name}}</a></li>
+					<li><a class="transition3ms" (click)="logout()">Sign out<i class="fa fa-sign-out float-right mt-1"></i></a></li>
 				</ul>
 			</li>
 		</ul>
