--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="name" placeholder="Name" [(ngModel)]="loginObj.userName">
+					<input matInput type="email" name="name" placeholder="Email" [(ngModel)]="loginObj.email">
 				</mat-form-field>
 			</div>
 			<div class="form-group col-12">
@@ -12,14 +12,11 @@
 					<input matInput type="password" name="password" placeholder="Password" [(ngModel)]="loginObj.password">
 				</mat-form-field>
 			</div>
-			<div class="form-group col-12 text-right">
-				<a class="thLink" href="/forgotPassword" title="Forgot Password">Forgot password?</a>
-			</div>
 			<div class="form-group col-12">
-				<button mat-raised-button class="mt-2 thBtn w-100" color="primary">Login</button>
+				<button mat-raised-button (click)="loginUser()" class="mt-2 thBtn w-100" color="primary">Login</button>
 			</div>
 			<div class="form-group col-12 text-left">
-				<p>Don't have a account? <a class="thLink" href="/signUp" title="Sign Up">Signup</a></p>
+				<p>Don't have a account? <a class="thLink" [routerLink]="['/signUp']" title="Sign Up">Signup</a></p>
 			</div>
 		</div>
 	</div>
