--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<div class="mainLogCon">
+<div class="mainLogCon py-5">
 	<div class="loginCon">
 		<h2 class="mb-4">Sign Up</h2>
 		<div class="row">
@@ -14,7 +14,7 @@
 			</div>
 			<div class="form-group col-12">
                 <mat-form-field class="w-100">
-                    <input matInput type="number" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.mobileNumber">
+                    <input matInput type="text" maxlength="10" OnlyNumber="true" name="number"  placeholder="Phone Number" [(ngModel)]="signupObj.mobileNumber" required>
                 </mat-form-field>
             </div>
 			<div class="form-group col-12">
@@ -24,7 +24,7 @@
 			</div>
 			<div class="form-group col-12">
 				<mat-form-field class="w-100">
-					<input matInput type="text" name="username" placeholder="Username" [(ngModel)]="signupObj.username" required>
+					<input matInput type="text" OnlyNumber="true" maxlength="3" name="age" placeholder="Age" [(ngModel)]="signupObj.age" required>
 				</mat-form-field>
 			</div>
 			<div class="form-group col-6">
@@ -38,19 +38,24 @@
 				</mat-form-field>
 			</div>
 			<div class="row mx-0 w-100">
-				<div class="col-6 text-left">
-					<mat-radio-button value="1" color="primary" class="thRadio">Female</mat-radio-button>
-				</div>
-				<div class="col-6 text-left">
-					<mat-radio-button value="2" color="primary" class="thRadio">Male</mat-radio-button>
-				</div>
+				<mat-radio-group [(ngModel)]="signupObj.gender">
+					<div class="col-6 text-left">
+						<mat-radio-button value="female" color="primary" class="thRadio">Female</mat-radio-button>
+					</div>
+					<div class="col-6 text-left">
+						<mat-radio-button value="male" color="primary" class="thRadio">Male</mat-radio-button>
+					</div>
+				</mat-radio-group>
 			</div>
 			<div class="form-group col-12">
 				<button mat-raised-button class="mt-2 thBtn w-100" color="primary" (click)="registerUser()">register</button>
 			</div>
 			<div class="form-group col-12 text-left">
-				<p>Already have an account? <a class="thLink" href="/login" title="Sign Up">login</a></p>
+				<p>Already have an account? <a class="thLink" [routerLink]="['/login']" title="Sign Up">login</a></p>
 			</div>
 		</div>
 	</div>
+</div>
+<div *ngIf="showLoader" style="position: fixed; z-index: 1003; left: 0; top: 0; bottom: 0; right: 0; background: #bfbfbf75; opacity: 1;">
+    <img id="loadinggif" src="assets/images/load.gif" style="width: 100px; height: 100px; position: absolute; top: 50%; left: 50%; margin: -28px 0 0 -25px;">
 </div>
